<resources>
    <string name="app_name">APPrender</string>
    <string name="habilita_tu_huella">Habilita tu huella</string>
    <string name="recupera_tu_contrase_a">Recupera tu contraseña</string>
    <string name="nuevo_usuario">Nuevo Usuario</string>
    <string name="ingresa_tus_datos">Ingresa tus datos :</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar">INGRESAR</string>
    <string name="recuerda_tu_usuario">Recuerda tu usuario</string>
    <string name="volver">Volver</string>
    <string name="iniciar_sesi_n">INICIAR SESIÓN</string>
</resources>
